Fixed test for jdk17